   Two new arguments were added: beamCarrierWeaponNum and beamCarrierUnitID.
   These will be populated in place of the first argument (projID).
 ! The following callins will now have 1-based weapon index arguments:
     DrawShield,
     ShieldPreDamaged,
     AllowWeaponTargetCheck,
     AllowWeaponTarget,
     AllowWeaponInterceptTarget,
     StockpileChanged
 - new callin UnitReverseBuilt, called when a living unit becomes a nanoframe again
 - add new callins DrawGroundPreForward and DrawGroundPreDeferred
   these run at the start of their respective passes when a custom
   map shader has been assigned via Spring.SetMapShader (convenient
   for setting uniforms)
 - add new callin DrawGroundPostDeferred; this runs at the end of its
   respective deferred pass and allows proper frame compositing (with
   ground flashes/decals/foliage/etc, which are drawn between it and
   DrawWorldPreUnit) via gl.CopyToTexture
 - add new callins DrawUnitsPostDeferred and DrawFeaturesPostDeferred
   these run at the end of their respective deferred passes to inform
   Lua code it should make use of the $model_gbuffer_* textures before
   another pass overwrites them (and to allow proper blending with e.g.
   cloaked objects which are drawn between these events and DrawWorld
   via gl.CopyToTexture)
   NOTE: the *PostDeferred events are only sent (and only have a real
   purpose) if forward drawing is disabled, whereas the DrawGroundPre*
   events are only sent if the map has a custom shader!

LuaDefs:
 ! los related UnitDefTags are now in elmos
 ! Lua{Feature,Unit}Defs:
   make the "model" subtable available (as it is for LuaUnitDefs)
   move the {min,max,mid}{x,y,z} values to this table (these can now be accessed
   using e.g. *Defs[i].model.midx)
   deprecate *Defs[i].modelname, use *Defs[i].model.path instead

Lua (lighting):
 ! Game.fogColor constant is no longer available, use gl.GetAtmosphere("fogColor")